--- a/sass/util/_layout.scss
+++ b/sass/util/_layout.scss
@@ -69,3 +69,12 @@
 				background-color: rgba(0, 0, 0, .5);
 		}
 }
+
+/**
+* override margin collapse
+*
+* ensures parent element evelops child padding and margin
+*/
+@mixin uncollapse() {
+	border-bottom: 1px solid transparent;
+}
